/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package trac.api.meta;

option java_package = "com.accenture.trac.common.api.meta";
option java_multiple_files = true;

import "trac/metadata/object_id.proto";
import "trac/metadata/tag.proto";

import "google/api/annotations.proto";


/**
 * API for reading metadata objects from the TRAC metadata store.
 *
 * This API is for reading metadata from the metadata store when the IDs of the
 * metadata items are known; to search the metadata store, see MetadataSearchApi.
 * To understand the TRAC metadata model, refer to the documentation for
 * ObjectDefinition and Tag.
 *
 * This API is a multi-tenant API. For gRPC requests every request includes a
 * tenant code, for REST requests the tenant code is the first element of every
 * path.
 *
 * @see ObjectDefinition
 * @see Tag
 */
service MetadataReadApi {

    /**
     * Read a single object from the TRAC metadata store using a tag selector.
     *
     * Tag selectors are used throughout the TRAC metadata structures and API
     * calls to refer to objects. For example, a job definition includes
     * selectors to define the data sets and models that were selected for the
     * job. Those selectors can be passed directly into this call.
     *
     * Tag selectors can refer to object and tag versions either using explicit
     * version numbers, with as-of times or by referring to the current latest
     * version. Combinations are also possible (e.g. object version x, latest
     * tag).
     *
     * This call takes a single selector and returns a single Tag, including the
     * object definition. Error conditions include: Invalid request, unknown
     * tenant, unknown object ID, object type does not match ID, unknown object
     * version, unknown tag version.
     *
     * @see TagSelector
     * @see Tag
     */
    rpc readObject(ReadRequest) returns (metadata.Tag) {
        option (google.api.http) = {
            post: "/{tenant}/read-object"
            body: "selector"
        };
    }

    /**
     * Read multiple objects from the TRAC metadata store using tag selectors.
     *
     * Tag selectors are used throughout the TRAC metadata structures and API
     * calls to refer to objects. For example, a job definition includes
     * selectors to define the data sets and models that were selected for the
     * job. Those selectors can be passed directly into this call.
     *
     * Tag selectors can refer to object and tag versions either using explicit
     * version numbers, with as-of times or by referring to the current latest
     * version. Combinations are also possible (e.g. object version x, latest
     * tag).
     *
     * This call takes multiple selectors and returns multiple Tags in the same
     * order, including their object definitions. Selectors for different object
     * types and with different criteria for selecting versions can be mixed
     * freely in a single request. Error conditions include: Invalid request,
     * unknown tenant, unknown object ID, object type does not match ID, unknown
     * object version, unknown tag version. If there is an error for any of the
     * selectors the whole request will fail.
     *
     * @see TagSelector
     * @see Tag
     */
    rpc readBatch(ReadBatchRequest) returns (ReadBatchResponse) {
        option (google.api.http) = {
            post: "/{tenant}/read-batch"
            body: "selector"
        };
    }

    /**
     * Load a single metadata object with a known object version and tag version.
     *
     * To use this call, supply a tenant code, object type, ID, object version and
     * tag version. In the gRPC call these parameters are passed via a
     * MetadataReadRequest, in the REST version they are supplied via the URL.
     *
     * The call will return exact object version and tag version specified in the
     * request, the response includes the full object definition.
     *
     * Error conditions include: Invalid request, unknown tenant, unknown object
     * ID, object type does not match ID, unknown object version, unknown tag
     * version.
     *
     * @see MetadataReadRequest
     * @see Tag
     */
    rpc loadTag(MetadataReadRequest) returns (trac.metadata.Tag) {
        option (google.api.http) = {
            get: "/{tenant}/{objectType}/{objectId}/versions/{objectVersion}/tags/{tagVersion}"
        };
    }

    /**
     * Load the latest tag for a metadata object with a known object version.
     *
     * To use this call, supply a tenant code, object type, ID and version. In the
     * gRPC call these parameters are passed via a MetadataReadRequest, in the
     * REST version they are supplied via the URL.
     *
     * The call will return the latest tag for the specified version of the object,
     * the response includes the full object definition.
     *
     * Error conditions include: Invalid request, unknown tenant, unknown object
     * ID, object type does not match ID, unknown object version.
     *
     * @see MetadataReadRequest
     * @see Tag
     */
    rpc loadLatestTag(MetadataReadRequest) returns (trac.metadata.Tag) {
        option (google.api.http) = {
            get: "/{tenant}/{objectType}/{objectId}/versions/{objectVersion}/tags/latest"
        };
    }

    /**
     * Load the latest version of a metadata object.
     *
     * To use this call, supply a tenant code, object type and ID. In the gRPC call
     * these parameters are passed via a MetadataReadRequest, in the REST version
     * they are supplied via the URL.
     *
     * The call will return the latest version of the object with its latest tag,
     * the response includes the full object definition.
     *
     * Error conditions include: Invalid request, unknown tenant, unknown object
     * ID, object type does not match ID.
     *
     * @see MetadataReadRequest
     * @see Tag
     */
    rpc loadLatestObject(MetadataReadRequest) returns (trac.metadata.Tag) {
        option (google.api.http) = {
            get: "/{tenant}/{objectType}/{objectId}/versions/latest/tags/latest"
        };
    }

};


message ReadRequest {

    string tenant = 1;

    metadata.TagSelector selector = 2;
};

message ReadBatchRequest {

    string tenant = 1;

    repeated metadata.TagSelector selector = 2;
};

message ReadBatchResponse {

    repeated metadata.Tag tag = 1;
};



/**
 * Request to read an object from the metadata read API.
 *
 * @see MetadataReadApi
 */
message MetadataReadRequest {

    string tenant = 1;

    trac.metadata.ObjectType objectType = 2;
    string objectId = 3;
    int32 objectVersion = 4;
    int32 tagVersion = 5;
};
