/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package trac.api.meta;

option java_package = "com.accenture.trac.common.api.meta";
option java_multiple_files = true;

import "trac/metadata/search.proto";
import "trac/metadata/tag.proto";

import "google/api/annotations.proto";


service MetadataSearchApi {

  rpc search(MetadataSearchRequest) returns (MetadataSearchResponse) {
    option (google.api.http) = {
      post: "/{tenant}/{searchParams.objectType}/search?priorVersions={searchParams.priorVersions}"
      body: "searchParams.search"
    };
  }

};


message MetadataSearchRequest {

  string tenant = 1;

  trac.metadata.search.SearchParameters searchParams = 2;
};

message MetadataSearchResponse {

  repeated trac.metadata.Tag searchResult = 1;
};
