/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package trac.api.meta;

option java_package = "com.accenture.trac.common.api.meta";
option java_multiple_files = true;

import "trac/metadata/type.proto";
import "trac/metadata/object.proto";
import "trac/metadata/tag.proto";

import "google/api/annotations.proto";


service MetadataPublicWriteApi {

    rpc saveNewObject (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/{objectType}/new-object"
            body: "tag"
        };
    }

    rpc saveNewVersion (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/{objectType}/new-version"
            body: "tag"
        };
    }

    rpc saveNewTag (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/{objectType}/new-tag"
            body: "tag"
        };
    }
}


service MetadataTrustedWriteApi {

    rpc saveNewObject (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/trusted/{objectType}/new-object"
            body: "tag"
        };
    }

    rpc saveNewVersion (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/trusted/{objectType}/new-version"
            body: "tag"
        };
    }

    rpc saveNewTag (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/trusted/{objectType}/new-tag"
            body: "tag"
        };
    }

    rpc preallocateId (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/trusted/{objectType}/preallocate"
            body: "tag"
        };
    }

    rpc savePreallocatedObject (MetadataWriteRequest) returns (IdResponse) {
        option (google.api.http) = {
            post: "/{tenant}/trusted/{objectType}/save-preallocated"
            body: "tag"
        };
    }
}


message MetadataWriteRequest {

    string tenant = 1;

    trac.metadata.ObjectType objectType = 2;
    trac.metadata.Tag tag = 3;
}

message IdResponse {

    trac.metadata.UUID objectId = 1;
    int32 objectVersion = 2;
    int32 tagVersion = 3;
}
